# Feuilles-de-temps

./: .gitignore  CLAUDE.md  README.md  package.json
client/: components.json  index.html  package.json  vite.config.ts
client/src/: App.tsx  api.ts  index.css  types.ts
client/src/components/: NavTimerWidget.tsx
client/src/components/ui/: date-picker.tsx  popover.tsx
client/src/pages/: ActivitiesPage.tsx  CustomersPage.tsx  ProjectsPage.tsx  ReportPage.tsx  SettingsPage.tsx  StatsPage.tsx  TrackerPage.tsx  TrayPopupPage.tsx
docs/plans/: 2026-02-20-timesheet-tracker-design.md  2026-02-20-timesheet-tracker-implementation.md
docs/superpowers/plans/: 2026-04-01-screen-tracking.md  2026-04-03-precise-matching-plan1.md
docs/superpowers/specs/: 2026-04-01-activity-tracking-design.md  2026-04-03-precise-timesheet-matching-design.md  2026-04-03-tempo-v2-vision.md
server/: package.json  tsconfig.json
server/src/: app.ts  index.ts  ollama.ts  storage.ts  time-utils.ts  types.ts
server/src/__tests__/: activities.test.ts  export.test.ts  projects.test.ts  storage.test.ts  time-utils.test.ts  timesheet.test.ts
server/src/routes/: activities.ts  customers.ts  deferred.ts  export.ts  projects.ts  report.ts  stats.ts  timesheet.ts  tracking.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.py  icon.icns
src-tauri/src/: lib.rs  main.rs
